<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartingGame"
    android:background="@drawable/ic_default_back">

    <TextView
        android:id="@+id/tv_game_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/memory_card_game"
        android:textAlignment="center"
        android:textColor="@color/forbidden_color_1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:backgroundTint="@color/forbidden_color_4"
        android:elevation="15dp"
        android:paddingStart="16dp"
        android:paddingEnd="16dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_game_title">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/choose_difficulty"
                android:textAlignment="center"
                android:textColor="@color/forbidden_color_1"
                android:textSize="34sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/btn_easy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="8dp"
                android:text="@string/easy_4_x_2"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_medium"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/medium_6_x_3"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_hard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hard_6_x_4"
                android:textColor="@color/white" />

            <Button
                android:id="@+id/btn_start_game"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="8dp"
                android:enabled="false"
                android:text="@string/start"
                android:textColor="@color/forbidden_color_5" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>